--- a/templates/task.html
+++ b/templates/task.html
@@ -13,10 +13,11 @@
         <section>
             <h2>Task Introduction</h2>
             <p>
-                You will be asked to report a security incident through different types of incident reporting systems.
-                Read the task details and report the incident using <strong>System A</strong> and <strong>System B</strong>.
-                Your instructor will guide you on which system to start with first. For instance, your instructor may direct you to begin with <strong>System B</strong>. In that case, use <strong>System B</strong> to submit the incident first, and then proceed to <strong>System A</strong>.
-                Once you have completed reporting the incident using both systems, you can fill out the questionnaire. Now, please proceed to read the task.
+                 You will be asked to report a security incident through different types of incident reporting systems.
+                 Read the task details and report the incident using <strong>System A</strong> and <strong>System B</strong>.
+                 Please start with <strong>System A</strong> and then proceed to <strong>System B</strong> to submit the incident.
+                 Once you have completed reporting the incident using both systems, you can fill out the questionnaire. 
+                 Now, please proceed to read the task.
             </p>
         </section>
 
@@ -50,8 +51,7 @@
                     Regards,<br>
                     TechSecure Account Security Team
                 </blockquote>
-                <li><strong>Attachment:</strong> A PDF file named <em>AccountVerificationDetails.pdf</em>
-                    (You can find this in your downloads folder).</li>
+                <li><strong>Attachment:</strong> When you are asked to upload a PDF, you can upload any PDF file from the computer you are using as proof. The system does not validate the content of the uploaded file.</li>
             </ul>
         </section>
 
